--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -30,3 +30,4 @@
 @import "modules/_page-gallery-opened";
 @import "modules/_page-apartments";
 @import "modules/_policy";
+@import "modules/_404page";
