--- a/app/scss/modules/_page-blog.scss
+++ b/app/scss/modules/_page-blog.scss
@@ -105,7 +105,7 @@
             margin: 0 0 30px;
         }
     }
-    .price {
+    table {
         display: none;
         grid-template-columns: 40% 20% 40%;
         grid-gap: 2px;
