--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -100,7 +100,7 @@ button::-moz-focus-inner {
     transition: all 1s;
     @include pos($t: 0, $l: 0);
     position: fixed;
-    @include size(100%, 100vh);
+    @include size(100vw, 100vh);
     background: #f5f5f4;
     z-index: 100;
     .wrap {
@@ -176,4 +176,14 @@ button::-moz-focus-inner {
             left: -140%;
         }
     }
+}
+
+//FLATRIS BUTTON
+.chess_active_btn {
+    display: none !important
+}
+
+input {
+    -webkit-border-radius: 0;
+    border-radius: 0;
 }
