--- a/app/scss/modules/_page-article.scss
+++ b/app/scss/modules/_page-article.scss
@@ -108,14 +108,14 @@
                 line-height: 28px;
                 margin: 15px 0;
             }
-            &:after {
-                content: "";
-                display: table;
-                clear: both;
-            }
+            // &:after {
+            //     content: "";
+            //     display: table;
+            //     clear: both;
+            // }
         }
         p {
-            padding: 0 25px;
+            padding: 0 5px;
             @media (min-width: 1025px) {
                 padding: 0;
             }
@@ -133,7 +133,7 @@
         }
     }
     .text__headlide {
-        padding: 0 25px;
+        padding: 0 5px;
         //font-style: italic;
         font-weight: normal;
         font-size: 16px;
@@ -148,7 +148,7 @@
             margin-bottom: 45px;
         }
     }
-    .price {
+    table {
         font-size: 14px;
         line-height: 26px;
         color: #423C3A;
