--- a/app/pug/object-opened.pug
+++ b/app/pug/object-opened.pug
@@ -181,6 +181,16 @@ html(lang="en")
                             p Черновая шпаклевка межкомнатных и межквартирных перегородок, кроме рабочей стены на кухне и ванной с санузлом.
                             p становлены окна с двойными стеклопакетами и пятикамерным профилем.
                             p Индивидуальный газовый котел, должным образом смонтированный и подключен к системе отопления. По всей квартире устанавливаются радиаторы и полотенцесушитель. Установлены индивидуальные счетчики для электроэнергии, газа, воды. Установлены входные двери металлические с МДФ-накладками.
+                            <ol>
+                                <li>Цементная стяжка пола во всем жилом пространстве квартиры, кроме ванной и санузла.</li>
+                                <li>Сплошное выравнивание несущих вертикальных поверхностей известковым раствором.</li>
+                                <li>Черновая шпаклевка межкомнатных и межквартирных перегородок, кроме рабочей стены на кухне и ванной с санузлом.</li>
+                                <li>Установлены окна с двойными стеклопакетами и пятикамерным профилем.</li>
+                                <li>Индивидуальный газовый котел, должным образом смонтированный и подключен к системе отопления.</li>
+                                <li>По всей квартире устанавливаются радиаторы и полотенцесушитель.</li>
+                                <li>Установлены индивидуальные счетчики для электроэнергии, газа, воды.</li>
+                                <li>Установлены входные двери металлические с МДФ-накладками.</li>
+                            </ol>
                         p.show-less Свернуть
                         p.show-more Показать больше
                         a.arrow-btn.arrow-btn--left(href="#")
