--- a/app/scss/modules/_page-apartments.scss
+++ b/app/scss/modules/_page-apartments.scss
@@ -15,7 +15,7 @@
     }
     .title {
         font-size: 36px;
-        margin: 120px 0 20px;
+        margin: 140px 0 20px;
         @media (min-width: 1200px) {
             font-size: 64px;
             line-height: 78px;
@@ -53,49 +53,39 @@
         &__icon {
             &:after {
                 top: 0;
+                transform: none;
             }
         }
         .icon {
-            top: 11px;
+            //top: 0;
+            width: 11px;
         }
     }
 }
 
 .chess_iframe {
+    background: #F5F5F4 !important;
     position: absolute !important;
     top: calc(22vh + 80px)!important;
     right: unset !important;
-    left: 200px !important;
-    margin: 0 20px !important;
+    left: 0 !important;
     bottom: unset !important;
-    max-width: 1250px !important;
-    height: 75vh !important;
+    max-width: 100% !important;
     z-index: 7 !important;
-    @media (max-width: 1366px) {
-        width: 960px !important;
-        left: 200px !important;
-        height: 75vh !important;
-    }
-    @media (max-width: 1024px) {
-        width: 756px !important;
-        //left: 10vw !important;
-    }
-    @media (max-width: 960px) {
-        width: 680px !important;
-    }
-    @media (max-width: 768px) {}
-    @media (max-width: 576px) {
-        left: 0 !important;
-        top: calc(25vh + 80px)!important;
+    margin: 0 !important;
+    left: 0 !important;
+    top: calc(25vh + 80px)!important;
+    width: 100% !important;
+    @media (min-width: 1025px) {
+        padding: 0 190px 80px !important;
         width: 100% !important;
+        height: 100vh !important;
+        //left: 0 !important;
     }
 }
 
 .chess-wrapper {}
 
 .chess_close_btn {
-    // position: absolute !important;
-    // top: 37vh !important;
-    // left: calc(17vw + 1150px) !important;
     display: none !important;
 }
