--- a/app/scss/modules/_page-article.scss
+++ b/app/scss/modules/_page-article.scss
@@ -217,26 +217,29 @@
             position: relative;
             list-style-type: none;
             @media (min-width: 1025px) {
-                margin: 0 30px 1rem 70px;
+                margin: 0 30px 16px 70px;
+                //line-height: 32px;
             }
             &:before {
                 content: '';
-                @include pos($t: 3px, $l: -24px);
+                @include pos($t: 50%, $l: -24px);
+                transform: translateY(-50%);
                 counter-increment: list;
                 content: counter(list) "";
                 color: #FFF3A6;
                 z-index: 2;
                 @media (min-width: 1025px) {
-                    top: 8px;
-                    left: -45px;
+                    //top: 8.5px;
+                    left: -44px;
                 }
             }
             &::after {
                 content: '';
-                @include pos($t: 3px, $l: -30px);
+                @include pos($t: 50%, $l: -30px);
                 @include size(20px);
                 background: #423C3A;
                 border-radius: 50%;
+                transform: translateY(-50%);
                 // z-index: 1;
                 @media (min-width: 1025px) {
                     @include size(40px);
@@ -260,10 +263,11 @@
             }
             &::after {
                 content: '';
-                @include pos($t: 3px, $l: -30px);
+                @include pos($t: 50%, $l: -30px);
                 @include size(20px);
                 background: #423C3A;
                 border-radius: 50%;
+                transform: translateY(-50%);
                 //z-index: 1;
                 @media (min-width: 1025px) {
                     @include size(40px);
