--- a/app/scss/modules/_page-blog.scss
+++ b/app/scss/modules/_page-blog.scss
@@ -156,8 +156,8 @@
         background-size: cover;
         &:hover {
             img {
-                //transform: scale(-8);
-                width: 110%;
+                transform: translateX(-50%) translateY(50%) scale(1.1);
+                //width: 110%;
                 box-shadow: inset 14px 3px 170px -82px rgba(0, 0, 0, 0.75);
             }
         }
@@ -171,7 +171,7 @@
         .img {
             @include size(100%,
             auto);
-            transition: .3s ease-in-out;
+            transition: all 1s cubic-bezier(.04, .5, .68, 1.04);
             @media (min-width: 1025px) {
                 @include pos($b: 50%, $l: 50%);
                 transform: translateX(-50%) translateY(50%);
