--- a/app/scss/modules/_page-object-opened.scss
+++ b/app/scss/modules/_page-object-opened.scss
@@ -70,6 +70,76 @@
             }
         }
     }
+    ol {
+        margin: 0 0 1rem;
+        counter-reset: list 0;
+        strong {
+            text-decoration: underline;
+        }
+        li {
+            margin: 0 30px 1rem 60px;
+            position: relative;
+            list-style-type: none;
+            @media (min-width: 1025px) {
+                margin: 0 30px 16px 70px;
+                //line-height: 32px;
+            }
+            &:before {
+                content: '';
+                @include pos($t: 50%, $l: -24px);
+                transform: translateY(-50%);
+                counter-increment: list;
+                content: counter(list) "";
+                color: #FFF3A6;
+                z-index: 2;
+                @media (min-width: 1025px) {
+                    //top: 8.5px;
+                    left: -44px;
+                }
+            }
+            &::after {
+                content: '';
+                @include pos($t: 50%, $l: -30px);
+                @include size(20px);
+                background: #423C3A;
+                border-radius: 50%;
+                transform: translateY(-50%);
+                // z-index: 1;
+                @media (min-width: 1025px) {
+                    @include size(40px);
+                    left: -60px;
+                }
+            }
+        }
+    }
+    ul {
+        margin: 0 0 1rem;
+        counter-reset: list 0;
+        strong {
+            text-decoration: underline;
+        }
+        li {
+            margin: 0 30px 1rem 60px;
+            position: relative;
+            list-style-type: none;
+            @media (min-width: 1025px) {
+                margin: 0 30px 1rem 70px;
+            }
+            &::after {
+                content: '';
+                @include pos($t: 50%, $l: -30px);
+                @include size(20px);
+                background: #423C3A;
+                border-radius: 50%;
+                transform: translateY(-50%);
+                //z-index: 1;
+                @media (min-width: 1025px) {
+                    @include size(40px);
+                    left: -60px;
+                }
+            }
+        }
+    }
 }
 
 .object-header {
@@ -256,7 +326,7 @@
         }
         @media (min-width: 1025px) {
             font-size: 17px;
-            margin: 70px 0 50px 0;
+            margin: 70px 0 50px calc(100% - 400px);
         }
     }
 }
@@ -276,8 +346,8 @@
         @media (min-width: 1025px) {
             display: block !important;
             @include pos($t: 50%);
-            height: 150px;
-            width: 100px;
+            height: 75px;
+            width: 75px;
             z-index: 2;
             fill: #FFF3A6;
             transition: all .3s;
@@ -285,11 +355,11 @@
                 fill: #828282;
             }
             &__prev {
-                left: 200px;
+                left: 190px;
                 transform: translateY(-50%);
             }
             &__next {
-                right: 20px;
+                right: 10px;
                 transform: translateY(-50%) rotate(180deg);
             }
         }
