--- a/app/scss/modules/_page-object__modal.scss
+++ b/app/scss/modules/_page-object__modal.scss
@@ -183,7 +183,7 @@
             @media (min-width: 1025px) {
                 font-size: 19px;
                 line-height: 23px;
-                margin: 0 25px 40px;
+                margin: 0 0 40px;
             }
         }
         .text {
