--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -61,8 +61,6 @@
     input {
         // color: #423C3A;
         // border-bottom: 2px solid #423C3A;
-        -webkit-border-radius: 0;
-        border-radius: 0;
     }
     @media (min-width: 1025px) {
         font-size: 18px;
@@ -166,7 +164,11 @@
         @media (min-width: 1025px) {
             font-size: 19px;
             line-height: 23px;
+            padding: 0;
         }
+    }
+    .wpcf7-list-item {
+        margin: 0;
     }
     .wpcf7-checkbox {
         display: inline;
