--- a/app/scss/modules/_sidebar.scss
+++ b/app/scss/modules/_sidebar.scss
@@ -44,10 +44,12 @@
         }
         &-lang {
             display: flex;
-            justify-content: center;
+            justify-content: space-evenly;
             align-items: center;
             font-size: 1.25em;
             height: 100px;
+            width: 100%;
+            padding: 0 12.5%;
             position: relative;
             &:after {
                 content: '';
