styles fix; telegram icon fix;

--- a/app/pug/layout/footer.pug
+++ b/app/pug/layout/footer.pug
@@ -24,7 +24,7 @@
             //-     label( for="newsletter").footer-newsletter__title Ваш e-mail
             //-     input#newsletter(type="email").footer-newsletter__field
             //-     button(type="submit").btn.footer-newsletter__btn Хочу быть в курсе!
-            //FORM END
+            
             <div class="footer-newsletter__form">
                 <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений</h5>
                 <div role="form" class="wpcf7" id="wpcf7-f2445-o2" lang="ru-RU" dir="ltr">
@@ -44,7 +44,7 @@
                         <label class="footer-newsletter__title"> Ваш e-mail
                             <span class="wpcf7-form-control-wrap your-email">
                                 <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email footer-newsletter__field wpcf7-not-valid" aria-required="true" aria-invalid="true">
-                                <span role="alert" class="wpcf7-not-valid-tip">Неверно введён электронный адрес.</span>
+                                //-<span role="alert" class="wpcf7-not-valid-tip">Неверно введён электронный адрес.</span>
                             </span> 
                         </label>
                         <input type="submit" value="Хочу быть в курсе!" class="wpcf7-form-control wpcf7-submit btn">
@@ -53,17 +53,7 @@
                     </form>
                 </div>
             </div>        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
+            //FORM END
         a.arrow-btn.footer-btn(href="#")
             .arrow-btn__icon
                 svg.icon
@@ -78,7 +68,7 @@
                 a(href="#").footer-social__link
                     .svg-wrap
                         svg
-                            use(xlink:href="images/main-page_icons-sprite.svg#facebook icon")
+                            use(xlink:href="images/main-page_icons-sprite.svg#facebook")
                 a(href="#").footer-social__link
                     .svg-wrap
                         svg
@@ -86,6 +76,6 @@
                 a(href="#").footer-social__link
                     .svg-wrap
                         svg
-                            use(xlink:href="images/main-page_icons-sprite.svg#insta icon")
+                            use(xlink:href="images/main-page_icons-sprite.svg#insta")
         p.footer-copyright © 2020. 
             a.footer-link(href="www.angro.com.ua") www.angro.com.ua
