--- a/app/scss/modules/_page-apartments.scss
+++ b/app/scss/modules/_page-apartments.scss
@@ -47,6 +47,7 @@
     }
     .arrow-btn {
         color: #423C3A;
+        margin-bottom: 50px;
         &__text {
             line-height: 40px;
         }
