--- a/app/scss/modules/_section-objects.scss
+++ b/app/scss/modules/_section-objects.scss
@@ -4,12 +4,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    padding-bottom: 10px;
     .container {
         position: relative;
     }
     &__title {
         position: relative;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             height: 150px;
         }
         .grid {
@@ -21,7 +22,7 @@
         border-color: #FFFFFF;
         grid-column: 1/7;
         grid-row: 1/2;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             grid-column: 1/13;
         }
         @media (max-width: 812px) and (orientation: landscape) {
@@ -31,7 +32,7 @@
     .title {
         grid-column: 1/7;
         grid-row: 2/3;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             grid-column: 1/13;
         }
         @media (max-width: 812px) and (orientation: landscape) {
@@ -47,7 +48,7 @@
     &-tile {
         margin: 0 15px;
         display: grid !important; //hack for Slick Slider
-        @media (max-width: 576px) {}
+        @media (max-width: 1023px) {}
     }
     &-tile__headline {
         color: $link-default;
@@ -56,11 +57,11 @@
         margin: 285px 0 30px 0;
         grid-column: 1/7;
         grid-row: 3/4;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             grid-column: 1/13;
-            grid-row: 3/4;
+            grid-row: 1/2;
             text-align: center;
-            margin: 0 0 15px 0;
+            margin: 40px 0 15px 0;
         }
     }
     &-tile__text {
@@ -72,20 +73,15 @@
         grid-column: 1/7;
         grid-row: 4/5;
         font-family: Bellota Text;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             grid-column: 1/13;
             grid-row: 5/6;
             margin: 30px 0 50px 0;
             height: unset;
         }
-        @media (max-width: 1025px) {
+        @media (max-width: 1024px) {
             height: unset;
         }
-        // @media (max-width: 812px) and (orientation: landscape) {
-        //     grid-column: 1/13;
-        //     grid-row: 5/6;
-        //     margin: 30px 0 50px 0;
-        // }
     }
     &-tile__links {
         //font-size: 1rem;
@@ -94,7 +90,7 @@
         }
         grid-column: 1/7;
         grid-row: 5/6;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             grid-column: 1/13;
             grid-row: 6/7;
         }
@@ -106,7 +102,7 @@
         justify-content: space-between;
         grid-column: 7/13;
         grid-row: 1/6;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             grid-column: 1/13;
             grid-row: 4/5;
             width: 95%;
@@ -120,7 +116,7 @@
     &-tile__icons {
         display: flex;
         //padding: 1rem 1rem 2rem 1rem;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             padding: 0 .5rem;
         }
         //height: 30%;
@@ -137,7 +133,7 @@
         &-text {
             //line-height: 2rem;
             margin: 0 0 12px;
-            @media (max-width: 576px) {
+            @media (max-width: 1023px) {
                 font-size: 16px;
                 line-height: 20px;
                 margin: 0 0 14px 0;
@@ -146,7 +142,7 @@
         svg {
             @include size(95px);
             fill: transparent;
-            @media (max-width: 576px) {
+            @media (max-width: 1023px) {
                 @include size(45px);
             }
         }
@@ -157,7 +153,7 @@
     }
     &-slider__prev {
         display: none !important;
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             display: block !important;
             @include pos($t: 35%, $l: 5px);
         }
@@ -170,7 +166,7 @@
         @media (max-width: 1366px) {
             right: -53px;
         }
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             right: 5px;
             top: 35%;
         }
@@ -194,7 +190,7 @@
             @include size(45px, 85px);
             font-size: 50px;
         }
-        @media (max-width: 576px) {
+        @media (max-width: 1023px) {
             @include size(14px, 30px);
         }
         @media (max-width: 812px) and (orientation: landscape) {
