--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -98,9 +98,12 @@ a {
         svg {
             @include pos($t: 50%, $l: 50%);
             transform: translateX(-50%) translateY(-50%) rotate(-90deg);
-            @include size(13px, 35px);
+            @include size(10px, 20px);
             z-index: 2;
             fill: #423C3A;
+            @media (min-width: 1025px) {
+                @include size(13px, 35px);
+            }
         }
         &:after {
             content: '';
