--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -187,3 +187,10 @@ input {
     -webkit-border-radius: 0;
     border-radius: 0;
 }
+
+li {
+    &::before,
+    &::after {
+        content: none;
+    }
+}
