--- a/app/layout/modal-video.html
+++ b/app/layout/modal-video.html
@@ -1,6 +1,6 @@
 
 <div class="modal-video">
-  <div class="modal-video__content"><iframe src="https://www.youtube.com/embed/lxqG2UTpGUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="modal-video__content"><iframe id="video" src="https://www.youtube.com/embed/lxqG2UTpGUg?enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="modal-video__close"></div>
   </div>
 </div>
