--- a/app/pug/layout/video.html
+++ b/app/pug/layout/video.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.youtube.com/embed/lxqG2UTpGUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe id="video" src="https://www.youtube.com/embed/lxqG2UTpGUg?enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
