--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -166,6 +166,9 @@
         @media (max-width: 576px) {
             display: none;
         }
+        @media (max-width: 768px) {
+            display: none;
+        }
         @media (max-width: 812px) and (orientation: landscape) {
             display: none;
         }
@@ -189,14 +192,15 @@
         .btn {
             display: block;
             text-align: center;
+            vertical-align: middle;
             line-height: 50px;
             height: 50px;
+            font-size: 16px;
+            line-height: 50px;
             cursor: pointer;
-            @media (max-width: 960px) {
-                font-size: 14px;
-                padding: 0 1.3rem;
-            }
-            @media (max-width: 1025px) {
+            min-width: 150px;
+            @media (min-width: 1024px) {
+                cursor: pointer;
                 font-size: 14px;
                 padding: 0 .5rem;
             }
@@ -210,6 +214,10 @@
                 line-height: 23px;
             }
         }
+        @media (max-width: 768px) {
+            grid-column: 7 / 11;
+            grid-row: 2 / 3;
+        }
         @media (max-width: 812px) and (orientation: landscape) {
             grid-column: 2 / 12;
             grid-row: 3 / 4;
@@ -218,16 +226,6 @@
                 font-size: 19px;
                 line-height: 23px;
                 margin-bottom: 30px;
-            }
-        }
-        @media (max-width: 1025px) {}
-        @media (max-width: 769px) {
-            &__title {
-                font-size: 12px;
-                //margin: 0 10px 0 0;
-            }
-            .btn {
-                font-size: 10px;
             }
         }
     }
@@ -337,7 +335,7 @@
             grid-column: 1 / 6;
             grid-row: 2 / 3;
         }
-        // @media (max-width: 960px) {
+        // @media (min-width: 768px) {
         //     grid-column: 1 / 7;
         // }
         &__form {
@@ -398,6 +396,7 @@
             border-bottom: 1px solid #828282;
             padding: .1rem 0;
             color: #514947;
+            width: 100%;
             @media (max-width: 576px) {
                 margin: 0 0 30px 0;
                 padding: .5rem 0;
@@ -420,7 +419,8 @@
             height: 50px;
             font-size: 16px;
             line-height: 20px;
-            margin: 0 auto;
+            margin: 0 50px 0 0;
+            text-transform: unset;
             //align-self: flex-end;
             @media (min-width: 1025px) {
                 margin: 0 0 0 1rem;
