--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -18,6 +18,9 @@
         @media (min-width: 1024px) {
             line-height: 37px;
         }
+        @media (max-width: 1366px) {
+            font-size: 16px;
+        }
     }
     .title {
         font-size: 36px;
@@ -28,6 +31,9 @@
             margin-bottom: 10px;
             text-shadow: 1px 1px 2px #f5f5f4;
         }
+        @media (max-width: 1366px) {
+            font-size: 36px;
+        }
     }
     &-head {
         z-index: 5;
@@ -35,6 +41,9 @@
         grid-column: 1/13;
         @media (min-width: 1024px) {
             grid-column: 1/6;
+        }
+        @media (min-width: 1024px) {
+            grid-column: 1/5;
         }
     }
     .arrow-btn {
@@ -159,7 +168,8 @@
             // }
             img {
                 min-height: 100%;
-                width: 100%;
+                width: auto;
+                min-width: 100%;
                 @media (max-width: 576px) {
                     min-height: calc(100% - 30px);
                     width: calc(100% - 30px);
